--- a/FEICONT/pages/GenerarComunicacionBaja.xaml
+++ b/FEICONT/pages/GenerarComunicacionBaja.xaml
@@ -1,11 +1,13 @@
-﻿<Page x:Class="FEICONT.pages.Factura_Sunat"
+﻿<Page x:Class="FEICONT.pages.GenerarComunicacionBaja"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:gif="http://wpfanimatedgif.codeplex.com"
-      xmlns:local="clr-namespace:FEICONT.pages"        
-      Title="Envío de documentos electrónicos a Sunat" Loaded="Page_Loaded" KeyDown="Page_KeyDown">
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:FEICONT.pages"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="Generar comunicación de baja"  Loaded="Page_Loaded" KeyDown="Page_KeyDown">
+
     <Page.Resources>
         <Style x:Key="CalendarDayButtonStyleEx" TargetType="{x:Type CalendarDayButton}">
             <Setter Property="MinWidth" Value="5" />
@@ -252,7 +254,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Column="0" Grid.Row="0" x:Name="label" Content="Envió de documentos electrónicos" HorizontalContentAlignment="Center" FontSize="14" FontWeight="Bold" FontFamily="Calibri" Background="#dbeaf9" />
+        <Label Grid.Column="0" Grid.Row="0" x:Name="label" Content="Anulación de documentos electrónicos" HorizontalContentAlignment="Center" FontSize="14" FontWeight="Bold" FontFamily="Calibri" Background="#dbeaf9" />
         <Border Grid.Column="0" Grid.Row="1" Margin="10,10,10,10" BorderBrush="#DBDBDB" CornerRadius="0" BorderThickness="1, 1, 1, 1" >
             <Grid  Margin="0,0,0,0">
                 <Grid.RowDefinitions>
@@ -283,9 +285,16 @@
 
                     <Label  Grid.Column="2" Grid.Row="0" Content="Tipo de documento" HorizontalAlignment="Center"  VerticalAlignment="Center" Margin="0,6"/>
                     <ComboBox  x:Name="lstTipoDocumento" Grid.Column="3" Grid.Row="0" Margin="0,5,5,5" Style="{StaticResource ComboBoxFlatStyle}"/>
-                    
+
+                    <Label  Grid.Column="2" Grid.Row="1" Content="Estado de documento" HorizontalAlignment="Center"  VerticalAlignment="Center" Margin="0,6"/>
+                    <ComboBox  x:Name="lstEstadoDocumento" Grid.Column="3" Grid.Row="1" Margin="0,5,5,5" Style="{StaticResource ComboBoxFlatStyle}" >
+                        <ComboBoxItem IsSelected="True">Todos los documentos</ComboBoxItem>
+                        <ComboBoxItem>Dados de baja</ComboBoxItem>
+                        <ComboBoxItem>Sin dar de baja</ComboBoxItem>
+                    </ComboBox>
+
                     <StackPanel  Grid.Column="4" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center" >
-                        <Button Padding="50 0" Click="btnConsultar_Click">
+                        <Button Padding="50 0" x:Name="btnBuscar" Click="btnBuscar_Click">
                             <StackPanel Orientation="Horizontal">
                                 <Image x:Name="imageButton" Source="/FEICONT;component/images/search-icon.png"  Height="15" Width="15"/>
                                 <Label Content="Filtrar"/>
@@ -294,15 +303,8 @@
                     </StackPanel>
                 </Grid>
                 <DataGrid Grid.Column="0" Grid.Row="1" Margin="5" Padding="5" FrozenColumnCount ="0" x:Name="dgDocumentos" ColumnHeaderStyle="{DynamicResource HeaderStyle}"
-                  AutoGenerateColumns="False"
-                  CanUserAddRows="False"
-                  SelectionMode="Single"
-                  CanUserDeleteRows="False"
-                  CanUserResizeRows="False"
-                  Background="White"
-                  HeadersVisibility="Column"
-                  VerticalGridLinesBrush="#000000"
-                  GridLinesVisibility="None" SelectionUnit="FullRow" MinHeight="250"  >
+                  AutoGenerateColumns="False" CanUserAddRows="False" SelectionMode="Single" CanUserDeleteRows="False" CanUserResizeRows="False" Background="White"
+                  HeadersVisibility="Column" VerticalGridLinesBrush="#000000" GridLinesVisibility="None" SelectionUnit="FullRow" MinHeight="250"  >
                     <DataGrid.Resources>
                         <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#DEDCD9"/>
                         <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
@@ -456,14 +458,6 @@
                         <ColumnDefinition Width="3*"/>
                         <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
-                    <DockPanel Grid.Column="2" Grid.Row="0">
-                        <Button Margin="0,0,0,0" x:Name="btnValidar" HorizontalAlignment="Right" Click="btnValidar_Click"  VerticalAlignment="Bottom"  MinWidth="150">
-                            <StackPanel Orientation="Horizontal">
-                                <Image x:Name="imgbtnValidar" Source="/FEICONT;component/images/menu_resumendiario.png" Height="18" Width="26" RenderTransformOrigin="0.654,0.5" />
-                                <Label x:Name="lblbtnValidar" Content="Validar documento"/>
-                            </StackPanel>
-                        </Button>
-                    </DockPanel>
                     <DockPanel Grid.Column="3" Grid.Row="0">
                         <Button Margin="0,0,0,0" x:Name="btnDescargarXML" HorizontalAlignment="Right" Click="btnDescargarXML_Click"  VerticalAlignment="Bottom" MinWidth="150"  >
                             <StackPanel Orientation="Horizontal">
@@ -480,14 +474,6 @@
                             </StackPanel>
                         </Button>
                     </DockPanel>
-                    <!--<DockPanel Grid.Column="0" Grid.Row="0">
-                        <Button Margin="0,0,0,0" x:Name="btnDescartar" HorizontalAlignment="Left" VerticalAlignment="Bottom"   >
-                            <StackPanel Orientation="Horizontal">
-                                <Image  Source="/FEICONT;component/images/remove-icon.png" Height="18" Width="26" />
-                                <Label  Content="Eliminar o dar de baja al documento"/>
-                            </StackPanel>
-                        </Button>
-                    </DockPanel>-->
                 </Grid>
             </Grid>
         </Border>
